<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252331"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="276dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_cake" />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-80dp"
        app:layout_anchor="@id/action_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/v_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:background="#252331" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_large"
                    android:elevation="8dp"
                    app:cardBackgroundColor="#2B2A33"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_medium_3"
                            android:layout_marginTop="@dimen/margin_medium_3"
                            android:layout_marginRight="@dimen/margin_medium_3"
                            android:text="@string/detail_title"
                            android:textColor="@color/color_white"
                            android:textSize="@dimen/text_heading_2x"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/iv_send"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignTop="@+id/tv_title"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="@dimen/margin_medium_2"
                            android:layout_marginEnd="@dimen/margin_xlarge"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:elevation="8dp"
                            android:src="@drawable/ic_send"/>

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_title"
                            android:layout_alignStart="@+id/tv_title"
                            android:layout_alignEnd="@+id/iv_send"
                            android:layout_marginTop="@dimen/margin_medium_2"
                            android:lineSpacingMultiplier="1.3"
                            android:text="@string/detail"
                            android:textColor="#918ea1"
                            android:textSize="@dimen/text_regular" />


                        <LinearLayout
                            android:id="@+id/actionLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_description"
                            android:layout_alignStart="@+id/tv_description"
                            android:layout_alignEnd="@+id/tv_description"
                            android:layout_marginTop="@dimen/margin_medium_2"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <ImageView
                                    android:id="@+id/iv_time"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_centerHorizontal="true"
                                    android:elevation="8dp"
                                    android:src="@drawable/ic_clock" />

                                <TextView
                                    android:id="@+id/tv_time"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/iv_time"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/margin_medium"
                                    android:text="@string/time"
                                    android:textColor="#747182" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginStart="@dimen/margin_medium">

                                <ImageView
                                    android:id="@+id/iv_distance"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_centerHorizontal="true"
                                    android:elevation="8dp"
                                    android:src="@drawable/ic_location" />

                                <TextView
                                    android:id="@+id/tv_distance"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/iv_distance"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/margin_medium"
                                    android:text="@string/distance"
                                    android:textColor="#747182" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginStart="@dimen/margin_medium">

                                <ImageView
                                    android:id="@+id/iv_map"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_centerHorizontal="true"
                                    android:elevation="8dp"
                                    android:src="@drawable/ic_mapview" />

                                <TextView
                                    android:id="@+id/tv_map"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/iv_map"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/margin_medium"
                                    android:text="@string/map_view"
                                    android:textColor="#747182" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginStart="@dimen/margin_medium">

                                <ImageView
                                    android:id="@+id/iv_devilery"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_centerHorizontal="true"
                                    android:elevation="8dp"
                                    android:src="@drawable/ic_delivery" />

                                <TextView
                                    android:id="@+id/tv_devilery"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/iv_devilery"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="@dimen/margin_medium"
                                    android:text="@string/delivery"
                                    android:textColor="#747182" />

                            </RelativeLayout>


                        </LinearLayout>


                        <android.support.design.widget.TabLayout
                            android:id="@+id/tab_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/actionLayout"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:layout_alignStart="@+id/actionLayout"
                            android:layout_alignEnd="@+id/actionLayout"
                            app:tabIndicatorColor="@color/color_white"
                            app:tabTextColor="@color/color_white">

                            <android.support.design.widget.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/details" />

                            <android.support.design.widget.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu" />

                            <android.support.design.widget.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reviews" />
                        </android.support.design.widget.TabLayout>


                    </RelativeLayout>

                </android.support.v7.widget.CardView>


            </RelativeLayout>

        </FrameLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>